UI update fix: autoscroll fix: bottom bar shaking with new messages modify: scrollbar beside content

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,10 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
 
 .description {
@@ -110,12 +107,14 @@
 
 .message_container {
   list-style-type: none;
+  overflow-y: scroll;
+  height: calc(100vh - 70px);
 }
 
 .message {
   margin-bottom: 0.5rem;
   width: 50ch;
-  max-width: 50ch;
+  max-width: 100vw;
 }
 
 .input {
@@ -128,10 +127,10 @@
 }
 
 .chat_input {
-  position: sticky;
+  position: static;
   bottom: 0;
   width: 50ch;
-  max-width: 50ch;
+  max-width: 100vw;
   display: flex;
   justify-content: space-evenly;
   background-color: bisque;
